--- a/app/vercel.json
+++ b/app/vercel.json
@@ -1,12 +1,1 @@
-{
-  "version": 2,
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs18.x",
-      "includeFiles": "public/**"
-    }
-  },
-  "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
-  ]
-}
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
